--- a/datepicker.html
+++ b/datepicker.html
@@ -6,9 +6,9 @@
     <script src = 'datepicker.js'></script>
   </head>
   <body>
-
-    <input type = 'text' onclick = table() />
-    <div id = 'mytable'></div>
+    <div id ='mytable'></div>
+    <input type = 'text' id = 'mytable' onclick = table() />
+    <button onclick = sayHello('pavan')>button</button>
 
   </body>
 </html>
