Day12 Date picker

--- a/datepicker.html
+++ b/datepicker.html
@@ -8,7 +8,7 @@
   <body>
     <div id ='mytable'></div>
     <input type = 'text' id = 'mytable' onclick = table() />
-    <button onclick = sayHello('pavan')>button</button>
+    <button onclick = weekdays()>button</button>
 
   </body>
 </html>
