--- a/Datepicker.html
+++ b/Datepicker.html
@@ -6,9 +6,9 @@
 		<script src = 'Datepicker.js'></script>
 	</head>
 	<body>
-		<input type = 'text' onclick = 'printtables()' />
+		<input type = 'text' onclick = 'Datepicker()' id  = 'textbox' />
 		<div id = 'mydiv'></div>
-		<div id = 'mydiv'></div>
-		<button onclick = check()></button>
+		<div id = 'mydiv1'></div>
+		<button onclick = yeardec()></button>
 	</body>
 </html>
