--- a/Datepicker.html
+++ b/Datepicker.html
@@ -2,11 +2,21 @@
 	<head>
 		<title>DatePicker</title>
 		<link rel = 'stylesheet' type = 'text/css' href = 'Datepicker.css'>
+		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script src = 'jquery-1.3.2.min.js'></script>
 		<script src = 'Datepicker.js'></script>
 	</head>
-	<body>
-		<input type = 'text' onclick = 'Datepicker()' id  = 'textbox' />
+	<body onload = settime()>
+		<div>
+			<input type = 'text' onclick = 'Datepicker()' id  = 'textbox' />
+			<div id = 'mydiv3'></div>
+			<div id = 'mydiv4'></div>
+		</div>
 		<div id = 'mydiv'></div>
+		<div id = 'mydiv2'></div>
+
+
+ 		</select>
+		<textbox id ='textbox' ></textbox>
 	</body>
 </html>
